<resources>
    <string name="app_name">mid_practice</string>
    <string name="home">Home</string>
    <string name="page1">Page1</string>
    <string name="page2">Page2</string>
    <string name="item1">1</string>
    <string name="item2">2</string>
    <string name="item3">3</string>
    <string name="C_item1">1</string>
    <string name="C_item2">2</string>
    <string name="C_item3">3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>