<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:icon="@android:drawable/editbox_background"
            android:title="@string/C_item1" />
        <item
            android:icon="@android:drawable/arrow_down_float"
            android:title="@string/C_item2" />
        <item
            android:icon="@android:drawable/arrow_up_float"
            android:title="@string/C_item3" />
        <item
            android:icon="@android:drawable/alert_light_frame"
            android:title="@string/home" />
    </group>
    <item android:title="@string/page1">
        <menu>
            <item
                android:icon="@android:drawable/checkbox_off_background"
                android:title="@string/item1" />
            <item
                android:icon="@android:drawable/btn_dialog"
                android:title="@string/item2" />
        </menu>
    </item>
</menu>